# AgentHub

./: README.md  run.bat
agents/a2a_agents/git_agent/: README.md  a2a_server.py  agent.py  agent_executer.py  pyproject.toml
agents/a2a_agents/hitl_agent/: README.md  a2a_server.py  agent.py  agent_executer.py  pyproject.toml
agents/a2a_agents/samples/roll_dice_agent/: README.md  agent.json  agent.py  pyproject.toml
agents/a2a_agents/samples/travel_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
agents/a2a_agents/samples/weather_agent/: README.md  a2a_server.py  agent.py  agent_executor.py  pyproject.toml
agui_client/: README.md
agui_client/src/app/: globals.css
agui_client/src/app/components/: AddAgentModal.module.css  AddAgentModal.tsx  AgGridTable.tsx  AgentRibbon.tsx  ChatWindow.tsx  CreateLocalAgentForm.tsx  CreateMultiAgentForm.tsx  EditLocalAgentForm.tsx  EditOrchestratorForm.tsx  ListA2AAgents.tsx  ListLocalAgent.tsx  ListOrchestrators.tsx  MainLayout.tsx  Sidebar.module.css  Sidebar.tsx
agui_server/: README.md  agent_db.py  agents.db  local_agent.py  pyproject.toml  server.py
agui_server/orchestrator/: __init__.py  orchestrator_builder.py
